--- a/Demo.html
+++ b/Demo.html
@@ -80,7 +80,7 @@
             <div class="log-in">
 
                  <!--Image-->
-                <img src="welcome.svg" width="50%">
+                <img src="images/welcome.svg" width="50%">
                  <!--Image-->
 
                 <br>
@@ -127,14 +127,14 @@
            <!--Image-->
            <div class="side">
 
-            <img src="unlock.svg" width="55%">
+            <img src="images/unlock.svg" width="55%">
              <!--Image-->
         </div>
 <!--container ends-->
-            </div>
+            </div> 
 
         </div>
-
+ 
         <!-- footer -->
         <footer>
             <div class="footer">Technologies &#169; 2022 </div>
